--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,6 +7,7 @@ website:
   navbar:
     right:
       - about.qmd
+      - posts/ResumeForGit/Resume.qmd
       - icon: github
         href: https://github.com/
       - icon: twitter
